--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -139,19 +139,25 @@
 
 .weather-humidity {
   color: #ffffff;
-  background: rgba(0, 204, 255, 0.724);
-  border-color: rgba(8, 145, 178, 0.3);
+  /* background: rgba(0, 204, 255, 0.724);
+  border-color: rgba(8, 145, 178, 0.3); */
+  background: rgba(0, 81, 255, 0.683);
+  border-color: rgba(37, 99, 235, 0.3);
 }
 
 .weather-wind {
   color: #ffffff;
-  background: rgba(1, 137, 249, 0.587);
-  border-color: rgba(5, 150, 105, 0.3);
+  /* background: rgba(1, 137, 249, 0.587);
+  border-color: rgba(5, 150, 105, 0.3); */
+  background: rgba(0, 81, 255, 0.683);
+  border-color: rgba(37, 99, 235, 0.3);
 }
 
 .weather-precipitation {
-  color: #2563eb;
-  background: rgba(37, 99, 235, 0.1);
+  color: #ffffff;
+  /* background: rgb(6, 49, 240);
+  border-color: rgba(37, 99, 235, 0.3); */
+  background: rgba(0, 81, 255, 0.683);
   border-color: rgba(37, 99, 235, 0.3);
 }
 
